2002-03-30  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.10.

	* Removed pci.ids from the CVS as they are now maintained separately.
	They are still included in the tarball, but if you are building	pciutils
	from CVS sources or you want to get a newer ID file than the one distributed,
	just use "make update-ids" to download the most recent snapshot from
	pciids.sf.net.

	* Makefile, README: Updated accordingly.

	* Makefile: Added a couple of maintenance targets.

	* maint/*: Maintainer's utilities now reside here (present only in CVS,
	not in the tarball).

	* lib/names.c (parse_name_list): End-of-line comments are no longer
	supported. Hashes are now perfectly valid in all names and they start
	a comment only at the start of the line.

2002-03-26  Martin Mares  <mj@ucw.cz>

	* README: Rewritten.

	* Makefile: When the currently installed pci.ids file is newer than
	the version to be installed, don't overwrite it. Suggested by
	Jean Delvare <khali@linux-fr.org>.

2002-03-24  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_pcix_bridge): Added PCI-X capability display.
	Contributed by Jeff Garzik <jgarzik@mandrakesoft.com>.

	* lib/header.h: Added PCI-X stuff. Again by Jeff.

	* Makefile (CFLAGS): -Werror is gone.

	* lspci.c (format_agp_rate): Fixed AGP rate reporting.

	* lib/filter.c (pci_filter_parse_slot): Allow bus 0xff, slot 0x1f and
	function 7.

	* lib/names.c (pci_lookup_name): When printing unknown subsystem vendor
	or device hexadecimally, don't confuse it with chip vendor/device ID.
	First reported by Marc Boucher <marc@mbsi.ca>.

2001-11-04  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.9.

	* pci.ids: Synced with the PCI ID Repository at SourceForge
	(http://pciids.sourceforge.net/).

2000-08-25  Martin Mares  <mj@albireo.ucw.cz>

	* pci.ids: Updated ID's, synced with kernel 2.4.0-test7.

2000-06-13  Martin Mares  <mj@albireo.ucw.cz>

	* Makefile (uninstall): Fixed.

	* pci.ids: ID updates.

2000-05-20  Martin Mares  <mj@albireo.ucw.cz>
